# agentic-eng-workshops

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  tsconfig.base.json
agents/: README.md
docs/: ATTENDEE-SETUP.md  (+3 more)
workshops/02-harness-eng/harness-evolution/: .gitignore  CLAUDE.md  LICENSE  README.md  SLIDE-DECK.md  pyproject.toml
workshops/02-harness-eng/harness-evolution/benchmarks/: README.md  __init__.py
workshops/02-harness-eng/harness-evolution/benchmarks/tau2/: README.md  __init__.py  agent.py  harness.py  harness_config.yaml  harness_config_base.yaml  policy_hint.py  retail_exchange_guide.py  stop_guard.py  task.py  test_tau2.py  tool_filter.py
workshops/02-harness-eng/harness-evolution/docs/: agents.md  architecture.md
workshops/02-harness-eng/harness-evolution/harnessx/: __init__.py  _anyio_patch.py  cli.py  home.py  logging.py
workshops/02-harness-eng/harness-evolution/harnessx/api/: __init__.py  app.py  dimension_schema.py  models.py  sse_tracer.py
workshops/02-harness-eng/harness-evolution/harnessx/bundles/: __init__.py  coding.py  context.py  contrarian.py  control.py  execution.py  reliability.py  tools.py
workshops/02-harness-eng/harness-evolution/harnessx/config/: __init__.py  loader.py
workshops/02-harness-eng/harness-evolution/harnessx/core/: __init__.py  builder.py  config_schema.py  config_store.py  contract_check.py  events.py  harness.py  model_config.py  processor.py  runloop.py  state.py  trajectory.py
workshops/02-harness-eng/harness-evolution/harnessx/meta_harness/: __init__.py  agent.py  journal.py  replay.py  validate_workflow.py
workshops/02-harness-eng/harness-evolution/harnessx/plugins/: __init__.py  base.py  convert.py  discovery.py  loader.py  registry.py
workshops/02-harness-eng/harness-evolution/harnessx/processors/: __init__.py  _sp_utils.py
workshops/02-harness-eng/harness-evolution/harnessx/providers/: __init__.py  _utils.py  agentic.py  anthropic_provider.py  base.py  group.py  litellm_provider.py  openai_provider.py  responses_provider.py  sglang.py  spec.py  unconfigured.py
workshops/02-harness-eng/harness-evolution/harnessx/rl/: __init__.py  builder.py  config.py  task.py
workshops/02-harness-eng/harness-evolution/harnessx/sandbox/: __init__.py  base.py  docker.py  e2b.py  local.py
workshops/02-harness-eng/harness-evolution/harnessx/tools/: __init__.py  _dict_registry_mixin.py  base.py  code_execution.py  inmemory.py  mcp.py  spawn_subagent.py
workshops/02-harness-eng/harness-evolution/recipe/: __init__.py
workshops/02-harness-eng/harness-evolution/workshop/: .env.example  HANDS-ON.md  Makefile  README.md  ablate.sh  analyze_ablation.py  build_deck.py  deck-content.md  harness-evolution-workshop.pptx  levers_spectrum_chart.py  make_attribution_chart.py  make_lever_chart.py  serve-local.sh
(+206 files in other folders)
